app/assets/stylesheets/styles.css.scss
$textColor: blue;
$navbarLinkColor: blueDark;
$btnPrimaryBackground: orange;
$navbarCollapseWidth: 1200px;
$navbarHeight: 40px;
$dropdownLinkBackgroundHover: rgb(20,150,170);

@import 'bootstrap';
@import 'bootstrap-responsive';


body {
	padding-top: 65px;
/*background-image: url('background.jpg');*/
}

.navbar-inner {
	@include box-shadow(none !important);
	border: 0;
  .brand { font-size: 30px;
    font-style: oblique;
    font-weight: bold;
  }
  .nav{font-size: 15px;
  }
}

.footer {
	position: relative;
	margin-top: -100px;
	height: 100px;
	clear:both;
	padding-top: 100px;
	color: $grayLight;
	}

.hero-unit {
  /* background-image: url('Climbing.jpg');
  <% # background-position: right; %>*/
  padding: 10px;
  margin-bottom: 10px;  
  background-repeat: no-repeat;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
}


.row {
  .well {

    line-height: 75%;
	text-align: center;
	background-color: rgb(217,238,235);
}}

html, body {
  height: 100%;
}

#wrap {
  min-height: 100%;
  p{
		color: $gray;
	}
}

.push {
height: 5em;
}

#main {
  overflow:auto;
  padding-bottom:100px; /* this needs to be bigger than footer height*/
}

/* Required for jQueryMasonry */

.box {
    margin: 10px;
    padding: 6px;
    font-size: 11px;
    line-height: 1.4em;
    float: left;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    box-shadow: 1px 1px 10px #444;
    width: 200px;
    overflow: hidden;
    line-height: 75%;
  }

.box img {
    width: 100%;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.description {
  line-height: 75%;
    margin: 10px 0 10px;
 }

#comments {
  line-height: 75%;
  text-align: left; 
  h3 {text-align: center}
  h4 {text-align: left}
  #form-actions {background-color: rgb(217,238,235)}
 }

.profile{
h1 {text-align: center;

}}

.table thead th {
    background-color: #d9edf7;
}

#comment {
text-align: left; 
background-color: rgb(225,245,245);
line-height: 110%;

}

